--- a/kasa/package.json
+++ b/kasa/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.0"
   },
-  "homepage" : "https://exvigilaregemini.github.io/AdelinDubois_11_20052021/"
+  "homepage" : "https://exvigilaregemini.github.io/"
 }
