--- a/kasa/package.json
+++ b/kasa/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.0"
   },
-  "homepage" : "https://exvigilaregemini.github.io/"
+  "homepage" : "https://exvigilaregemini.github.io/AdelinDubois_11_20052021/"
 }
